# steviapp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  python_api.cpp
libs/: CMakeLists.txt
libs/control/: CMakeLists.txt  actionmanager.cpp  actionmanager.h  angleconstrainactionmanager.h  application.cpp  application.h  application_config.h.in  camerabaseactionmanager.cpp  camerabaseactionmanager.h  cameracalibrationactionmanager.cpp  cameracalibrationactions.cpp  cameracalibrationactions.h  cornerdetectionactions.cpp  cornerdetectionactions.h  correspondencessetactions.cpp  correspondencessetactions.h  correspondencessetactionsmanager.cpp  correspondencessetactionsmanager.h  datatableactionmanager.cpp  datatableactionmanager.h  datatableactions.cpp  datatableactions.h  distanceconstrainactionmanager.cpp  distanceconstrainactionmanager.h  fixedstereosequenceactionmanager.cpp  fixedstereosequenceactionmanager.h  fixedstereosequenceactions.cpp  fixedstereosequenceactions.h  imagebaseactionmanager.cpp  imagebaseactionmanager.h  imagebaseactions.cpp  imagebaseactions.h  landmarkbaseactionmanager.cpp  landmarkbaseactionmanager.h  landmarkbasedactions.cpp  landmarkbasedactions.h  localcoordinatesystemactions.cpp  localcoordinatesystembaseactionmanager.cpp  localcoordinatesystembaseactionmanager.h  mainwindow.cpp  (+22 more)
libs/datablocks/: CMakeLists.txt  angleconstrain.cpp  angleconstrain.h  camera.cpp  camera.h  cameracalibration.cpp  cameracalibration.h  correspondencesset.cpp  correspondencesset.h  dataexception.cpp  dataexception.h  datatable.cpp  datatable.h  distanceconstrain.cpp  distanceconstrain.h  exportablestereosequence.cpp  exportablestereosequence.h  fixedcolorstereosequence.cpp  fixedcolorstereosequence.h  fixedstereopluscolorsequence.cpp  fixedstereopluscolorsequence.h  floatparameter.cpp  floatparameter.h  genericcorrespondences.cpp  genericcorrespondences.h  georeferenceddatablockinterface.h  image.cpp  image.h  itemdatamodel.cpp  itemdatamodel.h  landmark.cpp  landmark.h  landmarkscollection.cpp  landmarkscollection.h  localcoordinatesystem.cpp  localcoordinatesystem.h  mounting.cpp  mounting.h  observationssummaryinterface.cpp  observationssummaryinterface.h  (+10 more)
libs/geo/: CMakeLists.txt  geoRaster.h  localframes.h  terrainProjector.h  wgs84.h
libs/geometry/: CMakeLists.txt  alignement.cpp  alignement.h  core.cpp  core.h  geometricexception.cpp  geometricexception.h  imagecoordinates.cpp  imagecoordinates.h  lensdistortion.cpp  lensdistortion.h  pointcloudalignment.cpp  pointcloudalignment.h  rotations.cpp  rotations.h
libs/gui/: CMakeLists.txt  cameracalibrationeditor.cpp  cameracalibrationeditor.h  cameracalibrationeditor.ui  cameracalibrationoptionsdialog.cpp  cameracalibrationoptionsdialog.h  cameracalibrationoptionsdialog.ui  cameracalibrationsparsealignementeditor.cpp  cameracalibrationsparsealignementeditor.h  cameracalibrationsparsealignementeditor.ui  cameracalibrationsparsealignementviewerinterface.cpp  cameracalibrationsparsealignementviewerinterface.h  cornerdetectortesteditor.cpp  cornerdetectortesteditor.h  cornermatchingeditor.cpp  cornermatchingeditor.h  cornermatchingtesteditor.cpp  cornermatchingtesteditor.h  datatablevieweditor.cpp  datatablevieweditor.h  editor.cpp  editor.h  fixedparametersoptionwidget.cpp  fixedparametersoptionwidget.h  fixedparametersoptionwidget.ui  fixedstereosequenceeditor.cpp  fixedstereosequenceeditor.h  fixedstereosequenceeditor.ui  gl_shaders.qrc  hexagonaltargetdetectionoptionsdialog.cpp  hexagonaltargetdetectionoptionsdialog.h  hexagonaltargetdetectionoptionsdialog.ui  imageeditor.cpp  imageeditor.h  imageeditor.ui  imagepointdetailseditor.cpp  imagepointdetailseditor.h  imagepointdetailseditor.ui  imageviewer.cpp  imageviewer.h  (+48 more)
libs/processing/: CMakeLists.txt  steppedprocess.cpp  steppedprocess.h
libs/sparsesolver/: CMakeLists.txt  ceressbasolver.cpp  ceressbasolver.h  fixedpreoptimizedparameters.h  graphcameracalibrator.cpp  graphcameracalibrator.h  graphroughbundleadjustementsolver.cpp  graphroughbundleadjustementsolver.h  graphsbasolver.cpp  graphsbasolver.h  graphstereorigsolver.cpp  graphstereorigsolver.h  helperfunctions.h  imagepointssolutionmodel.cpp  imagepointssolutionmodel.h  initialsolution.cpp  initialsolution.h  landmarkpointssolutionmodel.cpp  landmarkpointssolutionmodel.h  localcoordinatespointssolutionmodel.cpp  localcoordinatespointssolutionmodel.h  modularsbasolver.cpp  modularsbasolver.h  sbagraphreductor.cpp  sbagraphreductor.h  sbainitializer.cpp  sbainitializer.h  sparsesolverbase.cpp  sparsesolverbase.h
libs/testutils/: CMakeLists.txt
libs/utils/: CMakeLists.txt  editablefloatingpointblock.cpp  editablefloatingpointblock.h  functional.h  inplace_vector.h  optionlistvalue.cpp  optionlistvalue.h  statusoptionalreturn.h  types_infos.h
libs/vision/: CMakeLists.txt  checkboarddetector.cpp  checkboarddetector.h  imageio.cpp  imageio.h  indexed_timed_sequence.h  interpolation.cpp  interpolation.h  lensdistortionsmap.cpp  lensdistortionsmap.h  pointcloudio.cpp  pointcloudio.h  sparseMatchingPipeline.cpp  sparseMatchingPipeline.h  trajectoryImuPreIntegration.h  type_conversions.h  vision_global.h
modules/: CMakeLists.txt
modules/qcustomplot/: CMakeLists.txt
tests/: CMakeLists.txt
tests/demo_gyro_bias_preintegration/: CMakeLists.txt  main.cpp
tests/demo_spherical_pinhole_costs/: CMakeLists.txt  main.cpp
tests/test_functional_utils/: CMakeLists.txt  main.cpp
tests/test_geo_functions/: CMakeLists.txt  testGeoFrames.cpp  testTerrainProjector.cpp
tests/test_geometry/: CMakeLists.txt  testCore.cpp  testLenseDistortion.cpp  testPointCloudAlignement.cpp  testProjection.cpp  testRotations.cpp
tests/test_ins_preintegration/: CMakeLists.txt  main.cpp
tests/test_sba_solver/: CMakeLists.txt  main.cpp  test_sba_data.qrc
tests/test_test_utils/: CMakeLists.txt  main.cpp
tests/test_timeseq_functions/: CMakeLists.txt  testIndexedTimeSequence.cpp
tests/test_trajectory/: CMakeLists.txt  main.cpp
tests/test_uv_projectors/: main.cpp  (+1 more)
(+223 files in other folders)
