
message("")
message("Configuring module g20")
message("")

set(G2O_BUILD_APPS OFF)
set(G2O_BUILD_EXAMPLES OFF)

set(WITH_PYBIND11 OFF)

set(g2o_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
if(WIN32)
  set(g2o_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
else(WIN32)
  set(g2o_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
endif(WIN32)

add_subdirectory(g2o)
add_subdirectory(pnp)

set(G2O_LIB_DIR ${g2o_LIBRARY_OUTPUT_DIRECTORY})
set(G2O_LIBS core types_sba solver_csparse PARENT_SCOPE)
set(PNP_LIBS libpnp PARENT_SCOPE)

message(${g2o_SOURCE_DIR}/EXTERNAL/csparse)

set (MODULES_INCLUDE_DIRECTORIES ${MODULES_INCLUDE_DIRECTORIES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR}/modules/g2o ${CMAKE_CURRENT_SOURCE_DIR}/pnp ${g2o_SOURCE_DIR} ${g2o_SOURCE_DIR}/EXTERNAL/csparse ${EIGEN3_INCLUDE_DIR} PARENT_SCOPE)
set (MODULES_LINK_DIRECTORIES ${MODULES_LINK_DIRECTORIES} ${g2o_LIBRARY_OUTPUT_DIRECTORY} PARENT_SCOPE)
