
message("")
message("Configuring module g20")
message("")

set(G2O_BUILD_APPS OFF)
set(G2O_BUILD_EXAMPLES OFF)

set(WITH_PYBIND11 OFF)

set(g2o_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
if(WIN32)
  set(g2o_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
else(WIN32)
  set(g2o_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
endif(WIN32)

add_subdirectory(g2o)

option(buildTests OFF)
option(buildExamples OFF)
add_subdirectory(LibStevi)

option(buildExamples OFF)

add_subdirectory(qImageDisplayWidget)

set(G2O_LIB_DIR ${g2o_LIBRARY_OUTPUT_DIRECTORY})
set(G2O_LIBS core types_sba solver_csparse PARENT_SCOPE)
set(STEREOVISION_LIB ${STEREOVISION_LIB} PARENT_SCOPE)
set(QIMAGEDISPLAYWIDGET_LIB ${QIMAGEDISPLAYWIDGET_LIB} PARENT_SCOPE)

set (MODULES_INCLUDE_DIRECTORIES ${MODULES_INCLUDE_DIRECTORIES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR}/modules/g2o ${CMAKE_CURRENT_SOURCE_DIR}/LibStevi ${g2o_SOURCE_DIR} ${g2o_SOURCE_DIR}/EXTERNAL/csparse ${EIGEN3_INCLUDE_DIR} PARENT_SCOPE)
set (MODULES_LINK_DIRECTORIES ${MODULES_LINK_DIRECTORIES} ${g2o_LIBRARY_OUTPUT_DIRECTORY} PARENT_SCOPE)

install(TARGETS ${STEREOVISION_LIB} ${QIMAGEDISPLAYWIDGET_LIB}
  EXPORT ${STEVIAPP_SDK_EXPORTNAME}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  )
