add_subdirectory(qcustomplot)

set(QCUSTOMPLOT_LIB ${QCUSTOMPLOT_LIB} PARENT_SCOPE)

set (MODULES_INCLUDE_DIRECTORIES ${MODULES_INCLUDE_DIRECTORIES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/LibStevi ${EIGEN3_INCLUDE_DIR} PARENT_SCOPE)
set (MODULES_LINK_DIRECTORIES ${MODULES_LINK_DIRECTORIES} PARENT_SCOPE)
